--- a/assets/styles/styleGlobal.css
+++ b/assets/styles/styleGlobal.css
@@ -20,11 +20,11 @@
   --btn-secondary-bg-active-color: ;
 }
 
-/* .website {
-  background: #fcf6f6;
-  max-width: 1440px;
+.website {
+  position: relative;
+  max-width: 100vw;
   box-sizing: border-box;
-} */
+}
 
 .modal_overlay {
   position: fixed;
