--- a/assets/styles/output.css
+++ b/assets/styles/output.css
@@ -594,6 +594,10 @@ video {
   }
 }
 
+.pointer-events-none {
+  pointer-events: none;
+}
+
 .fixed {
   position: fixed;
 }
@@ -906,6 +910,10 @@ video {
   width: 100%;
 }
 
+.w-\[99vw\] {
+  width: 99vw;
+}
+
 .max-w-\[100vw\] {
   max-width: 100vw;
 }
@@ -928,6 +936,10 @@ video {
 
 .max-w-\[94vw\] {
   max-width: 94vw;
+}
+
+.max-w-1 {
+  max-width: 0.25rem;
 }
 
 .flex-shrink-0 {
