--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -11,6 +11,7 @@
     height: 100%;
   }
 }
+/* Tablet view */
 @media screen and (min-width: 482px) {
   .home-description__stat-block:not(:last-child)::after {
     content: '';
@@ -36,76 +37,7 @@
     min-width: 407px;
   }
 }
-/* Mobile && Tablet view */
-@media screen and (max-width: 1023px) {
-  /* Search button functionality */
-  .mobile-search__container {
-    height: 44px;
-    width: 80%;
 
-    position: absolute;
-    top: 10px;
-
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #f0f0f0;
-    border-radius: 1.5rem;
-    /* overflow: hidden; */
-
-    transform-origin: calc(100% - 70px) center;
-    transform: scaleX(0);
-  }
-  .mobile-search__container .search-dropdown {
-    position: relative;
-    width: 90%;
-  }
-  .mobile-search__container .search-results {
-    position: absolute;
-    left: 0;
-    top: 33px;
-
-    width: 95%;
-    background-color: rgb(226, 199, 199);
-
-    border-radius: 1rem;
-  }
-  .mobile-search__container .search-input {
-    width: 90%;
-    margin-left: 0px;
-    margin-right: 30px;
-    background-color: #f0f0f0;
-  }
-  .mobile-search__container.active {
-    animation: mobileSearchExpand;
-    animation-duration: 0.2s;
-    animation-timing-function: ease-in;
-    animation-fill-mode: forwards;
-  }
-
-  .mobile-search__container.closed {
-    animation: mobileSearchCollapse;
-    animation-duration: 0.2s;
-    animation-timing-function: ease-in;
-    animation-fill-mode: forwards;
-  }
-  @keyframes mobileSearchExpand {
-    0% {
-      transform: scaleX(0);
-    }
-    100% {
-      transform: scaleX(1);
-    }
-  }
-  @keyframes mobileSearchCollapse {
-    0% {
-      transform: scaleX(1);
-    }
-    100% {
-      transform: scaleX(0);
-    }
-  }
-}
 .home-description__stat-block {
   height: 52px;
   width: 160px;
@@ -177,121 +109,4 @@
   margin-left: auto;
   height: 100%;
   object-fit: cover;
-}
-
-.BurgerMenu__dropdown {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 140;
-  background-color: rgba(255, 255, 255, 0.97);
-  width: 46vw;
-  max-width: 300px;
-  height: 100vh;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 40px;
-
-  transform: translateX(-100%);
-}
-@keyframes dropdownSlideIn {
-  from {
-    transform: translateX(-100%);
-  }
-  to {
-    transform: translateX(0);
-  }
-}
-
-@keyframes dropdownSlideOut {
-  from {
-    transform: translateX(0);
-  }
-  to {
-    transform: translateX(-100%);
-  }
-}
-.BurgerMenu__dropdown.active {
-  animation: dropdownSlideIn 0.3s ease-out forwards;
-}
-.BurgerMenu__dropdown.closed {
-  animation: dropdownSlideOut 0.3s ease-out forwards;
-}
-
-.BurgerMenu__item {
-  font-size: 1.2rem;
-  font-weight: bold;
-  color: #333;
-  text-transform: uppercase;
-  text-align: center;
-  padding: 8px 0;
-  transition:
-    color 0.3s,
-    transform 0.3s;
-}
-.BurgerMenu__item:active {
-  color: #007bff;
-  transform: scale(1.05);
-}
-
-.search-results {
-  position: absolute;
-  left: 0;
-  top: 33px;
-
-  width: 98%;
-  padding: 10px;
-  background-color: rgb(226, 199, 199);
-
-  border-radius: 1rem;
-}
-
-.Auth__popup {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 140;
-
-  width: 70vw;
-  max-width: 440px;
-  border-radius: 2rem;
-
-  padding: 40px;
-  background-color: rgb(226, 199, 199);
-}
-.Step-back__arrow {
-  position: absolute;
-  left: 16px;
-  top: 20px;
-  transform: rotate(180deg);
-}
-.Auth__Greetings {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  gap: 30px;
-}
-.Auth__popup-btn {
-  background-color: black;
-  color: white;
-  font-family: 'Satoshi-Regular';
-  font-size: 26px;
-
-  padding: 10px 30px;
-  border-radius: 1rem;
-}
-
-.top-menu__nav-item {
-  display: flex;
-  align-items: center;
-}
-
-.BurgerMenu__dropdown.no-animation,
-.mobile-search__container.no-animation {
-  animation: none;
 }
