--- a/assets/styles/output.css
+++ b/assets/styles/output.css
@@ -973,6 +973,18 @@ video {
   cursor: pointer;
 }
 
+.cursor-move {
+  cursor: move;
+}
+
+.cursor-grab {
+  cursor: grab;
+}
+
+.cursor-grabbing {
+  cursor: grabbing;
+}
+
 .select-none {
   -webkit-user-select: none;
      -moz-user-select: none;
