--- a/assets/styles/item.css
+++ b/assets/styles/item.css
@@ -1,11 +1,65 @@
+@media (max-width: 1100px) {
+  /* Gallery */
+  .item__gallery {
+    width: 90%;
+    max-width: 500px;
+    margin: 20px auto;
+    grid-template-rows: repeat(2, auto);
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .item__main-picture {
+    grid-area: 1/1/2/4;
+    object-fit: contain;
+  }
+  .item__secondary-picture {
+    width: 94%;
+    margin-top: 12px;
+  }
+  .item__secondary-picture:not(:last-child) {
+    margin-right: 12px;
+  }
+}
+@media (min-width: 1101px) {
+  .top__section {
+    display: flex;
+    flex-direction: row;
+  }
+
+  /* Gallery */
+  .item__gallery {
+    width: 35%;
+    margin-left: auto;
+    max-height: 290px;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: 1fr 3fr;
+    align-items: stretch;
+  }
+  .item__main-picture {
+    grid-area: 1/2/4/3;
+    margin-left: 12px;
+    object-fit: contain;
+  }
+  .item__secondary-picture {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+  }
+  .item__secondary-picture:nth-child(n + 3) {
+    margin-top: 12px;
+  }
+  .item__interactive-menu {
+    width: 55%;
+    margin-left: auto;
+  }
+}
+
+/* Breadcrumbs */
 .path__breadcrumbs {
   display: flex;
 }
-
 .path__breadcrumb {
   display: flex;
 }
-
 .breadcrumb__pointer {
   display: inline-block;
 
@@ -14,14 +68,10 @@
   height: 12px;
 }
 
-.item__tabs-menu {
-  display: flex;
-}
-
+/* Reviews */
 .reviews__menu {
   display: flex;
 }
-
 .reviews__card {
   margin: 24px 16px auto 16px;
   padding: 24px;
@@ -30,31 +80,106 @@
   border-radius: 30px;
 }
 
+/* Gallery */
 .item__gallery {
-  width: 357px;
-  margin: 20px auto;
   display: grid;
-  grid-template-rows: 302px 118px;
-  grid-template-columns: 123px 123px 111px;
 }
 .item__main-picture {
-  width: 358px;
-  height: 290px;
+  width: 100%;
   border-radius: 20px;
-
-  grid-area: 1/1/2/4;
 }
-
 .item__secondary-picture {
-  width: 111px;
-  height: 106px;
   border-radius: 20px;
   object-fit: cover;
   cursor: pointer;
 }
-.item__secondary-picture:not(:last-child) {
-  margin-right: 12px;
-}
 .item__secondary-picture.chosen {
   border: 2px solid black;
+}
+
+.item__name {
+  font-family: 'Integral-Bold';
+  font-size: 2.5rem;
+}
+
+.item__price {
+  display: flex;
+}
+.item__price-current {
+  font-family: 'Satoshi-Bold';
+  font-size: 2rem;
+}
+.item__price-old {
+  font-family: 'Satoshi-Bold';
+  font-size: 2rem;
+  margin-left: 12px;
+  text-decoration: line-through;
+  color: rgba(0, 0, 0, 0.3);
+}
+.item__discount {
+  font-family: Satoshi-Regular;
+  font-size: 1rem;
+  margin-left: 12px;
+  border-radius: 62px;
+  background-color: rgba(255, 51, 51, 0.1);
+  color: #ff3333;
+  width: 72px;
+  height: 34px;
+  text-align: center;
+}
+
+.item__description {
+  font-family: 'Satoshi-Regular';
+  color: rgba(0, 0, 0, 0.6);
+  margin-top: 8px;
+}
+
+.item__colors__title {
+  margin-top: 20px;
+  font-family: 'Satoshi-Regular';
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.6);
+}
+.item__colors__list {
+  display: flex;
+}
+.item__available-colors {
+  width: 37px;
+  height: 37px;
+  border-radius: 50%;
+  margin-right: 16px;
+}
+
+.item__size__title {
+  margin-top: 20px;
+  font-family: 'Satoshi-Regular';
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.6);
+}
+.item__size__list {
+  display: flex;
+  margin-top: 16px;
+}
+.item__size__button {
+  margin-right: 12px;
+  font-family: 'Satoshi-Regular';
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.6);
+  padding: 12px 24px;
+  background-color: #f0f0f0;
+  border-radius: 30px;
+}
+
+.item__cart-quantity {
+  display: flex;
+  min-width: 110px;
+  max-width: 180px;
+  justify-content: space-between;
+  padding: 18px 22px;
+  background-color: #f0f0f0;
+  border-radius: 30px;
+}
+/*  */
+.item__tabs-menu {
+  display: flex;
 }
