--- a/assets/styles/styleGlobal.css
+++ b/assets/styles/styleGlobal.css
@@ -47,8 +47,16 @@
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-.horizontal-separator {
+.horizontal-separator-90 {
   width: 90%;
+  height: 1px;
+  border-top: solid 1px rgba(0, 0, 0, 0.1);
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.horizontal-separator-100 {
+  width: 100%;
   height: 1px;
   border-top: solid 1px rgba(0, 0, 0, 0.1);
   margin-left: auto;
