--- a/assets/styles/item.css
+++ b/assets/styles/item.css
@@ -28,7 +28,7 @@
   /* Gallery */
   .item__gallery {
     width: 35%;
-    margin-left: auto;
+    /* margin-left: auto; */
     max-height: 290px;
     grid-template-rows: repeat(3, 1fr);
     grid-template-columns: 1fr 3fr;
@@ -119,12 +119,13 @@
 .item__discount {
   font-family: Satoshi-Regular;
   font-size: 1rem;
-  margin-left: 12px;
+  margin: auto auto auto 12px;
   border-radius: 62px;
   background-color: rgba(255, 51, 51, 0.1);
   color: #ff3333;
   width: 72px;
   height: 34px;
+  line-height: 34px;
   text-align: center;
 }
 
@@ -149,6 +150,11 @@
   border-radius: 50%;
   margin-right: 16px;
 }
+.item__available-colors.selected {
+  background-image: url('/public/assets/icons/ChosenTickIcon.svg');
+  background-position: center;
+  background-repeat: no-repeat;
+}
 
 .item__size__title {
   margin-top: 20px;
@@ -170,16 +176,36 @@
   border-radius: 30px;
 }
 
+.item__cart {
+  display: flex;
+}
 .item__cart-quantity {
+  margin-top: 20px;
   display: flex;
   min-width: 110px;
   max-width: 180px;
+  height: 52px;
   justify-content: space-between;
-  padding: 18px 22px;
+  align-items: center;
+  padding: 0px 16px;
   background-color: #f0f0f0;
   border-radius: 30px;
 }
+
+.chosen-size-highlighted {
+  background-color: #000;
+  color: #fff;
+}
+
+.item__colors__button {
+  position: relative;
+}
+
 /*  */
-.item__tabs-menu {
+.tabs__list {
   display: flex;
+  justify-content: space-evenly;
+  height: 62px;
+  line-height: 62px;
+  width: 100%;
 }
