--- a/assets/styles/output.css
+++ b/assets/styles/output.css
@@ -679,6 +679,11 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.mx-\[10vw\] {
+  margin-left: 10vw;
+  margin-right: 10vw;
+}
+
 .-mb-4 {
   margin-bottom: -1rem;
 }
