--- a/assets/styles/default_layout.css
+++ b/assets/styles/default_layout.css
@@ -147,9 +147,12 @@
   left: -10px;
   top: -10px;
   width: 200px;
-  height: 200px;
-  background-color: gray;
+  background-color: white;
+  border: 2px solid black;
   border-radius: 20px;
+}
+.shop-dropdown__item {
+  padding: 6px 12px;
 }
 
 .search-results {
