--- a/assets/styles/styleGlobal.css
+++ b/assets/styles/styleGlobal.css
@@ -43,6 +43,23 @@
   pointer-events: all;
 }
 
+.native-overlay {
+  position: fixed;
+  opacity: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 120;
+  background: rgba(0, 0, 0, 0.25);
+  /* background: rgba(0, 0, 0, 0.7); */
+  pointer-events: none;
+}
+.native-overlay.active {
+  opacity: 1;
+  pointer-events: all;
+}
+
 .button-border {
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
