--- a/assets/styles/default_layout.css
+++ b/assets/styles/default_layout.css
@@ -30,12 +30,14 @@
   .mobile-search__container .search-results {
     position: absolute;
     left: 0;
-    top: 33px;
-
-    width: 95%;
-    background-color: rgb(226, 199, 199);
-
-    border-radius: 1rem;
+    top: 32px;
+    /* top: 33px; */
+    width: 94%;
+    /* width: 95%; */
+    background-color: #f0f0f0;
+    /* background-color: rgb(226, 199, 199); */
+    border-radius: 0 0 1rem 1rem;
+    /* border-radius: 1rem; */
   }
   .mobile-search__container .search-input {
     width: 90%;
@@ -148,23 +150,26 @@
   top: -10px;
   width: 200px;
   background-color: white;
-  border: 2px solid black;
+  /* border: 2px solid black; */
   border-radius: 20px;
 }
 .shop-dropdown__item {
+  display: block;
   padding: 6px 12px;
 }
 
 .search-results {
   position: absolute;
   left: 0;
-  top: 33px;
+  top: 32px;
+  /* top: 33px; */
 
   width: 98%;
   padding: 10px;
-  background-color: rgb(226, 199, 199);
+  background-color: #f0f0f0;
+  /* background-color: rgb(226, 199, 199); */
 
-  border-radius: 1rem;
+  border-radius: 0 0 1rem 1rem;
 }
 
 .Step-back__arrow-container {
