--- a/assets/styles/output.css
+++ b/assets/styles/output.css
@@ -650,6 +650,10 @@ video {
   z-index: 140;
 }
 
+.z-\[130\] {
+  z-index: 130;
+}
+
 .m-auto {
   margin: auto;
 }
@@ -799,6 +803,10 @@ video {
   margin-top: auto;
 }
 
+.mt-14 {
+  margin-top: 3.5rem;
+}
+
 .block {
   display: block;
 }
@@ -860,6 +868,18 @@ video {
 
 .h-\[64px\] {
   height: 64px;
+}
+
+.h-7 {
+  height: 1.75rem;
+}
+
+.h-8 {
+  height: 2rem;
+}
+
+.h-10 {
+  height: 2.5rem;
 }
 
 .max-h-\[10px\] {
@@ -924,6 +944,14 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-\[95\%\] {
+  width: 95%;
+}
+
+.w-\[99\%\] {
+  width: 99%;
 }
 
 .max-w-\[100vw\] {
@@ -1088,6 +1116,10 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
+.bg-\[\#1F0F0F0\] {
+  background-color: #1F0F0F0;
+}
+
 .bg-center {
   background-position: center;
 }
@@ -1194,6 +1226,26 @@ video {
 
 .pt-9 {
   padding-top: 2.25rem;
+}
+
+.pr-1 {
+  padding-right: 0.25rem;
+}
+
+.pr-2 {
+  padding-right: 0.5rem;
+}
+
+.pb-1 {
+  padding-bottom: 0.25rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
+.pt-1 {
+  padding-top: 0.25rem;
 }
 
 .text-left {
@@ -1384,6 +1436,10 @@ video {
     margin-left: 0px;
   }
 
+  .lg\:mt-10 {
+    margin-top: 2.5rem;
+  }
+
   .lg\:block {
     display: block;
   }
@@ -1431,6 +1487,14 @@ video {
 
   .xl\:mr-6 {
     margin-right: 1.5rem;
+  }
+
+  .xl\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .xl\:block {
+    display: block;
   }
 
   .xl\:flex {
