--- a/assets/styles/item.css
+++ b/assets/styles/item.css
@@ -28,25 +28,25 @@
   /* Gallery */
   .item__gallery {
     width: 35%;
-    /* margin-left: auto; */
-    max-height: 290px;
+    max-height: 280px;
     grid-template-rows: repeat(3, 1fr);
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: minmax(20px, 1fr) 3fr;
     align-items: stretch;
+    gap: 10px;
   }
   .item__main-picture {
     grid-area: 1/2/4/3;
-    margin-left: 12px;
     object-fit: contain;
+    /* margin-left: 12px; */
   }
   .item__secondary-picture {
     width: 100%;
     height: 100%;
     object-fit: contain;
   }
-  .item__secondary-picture:nth-child(n + 3) {
+  /* .item__secondary-picture:nth-child(n + 3) {
     margin-top: 12px;
-  }
+  } */
   .item__interactive-menu {
     width: 55%;
     margin-left: auto;
