--- a/assets/styles/output.css
+++ b/assets/styles/output.css
@@ -610,6 +610,10 @@ video {
   position: relative;
 }
 
+.inset-0 {
+  inset: 0px;
+}
+
 .left-0 {
   left: 0px;
 }
@@ -628,6 +632,30 @@ video {
 
 .top-\[50\%\] {
   top: 50%;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.left-2 {
+  left: 0.5rem;
+}
+
+.top-2 {
+  top: 0.5rem;
+}
+
+.left-3 {
+  left: 0.75rem;
+}
+
+.top-3 {
+  top: 0.75rem;
 }
 
 .z-0 {
@@ -652,6 +680,10 @@ video {
 
 .z-\[140\] {
   z-index: 140;
+}
+
+.z-\[150\] {
+  z-index: 150;
 }
 
 .m-auto {
@@ -819,11 +851,6 @@ video {
   display: none;
 }
 
-.size-3 {
-  width: 0.75rem;
-  height: 0.75rem;
-}
-
 .size-4 {
   width: 1rem;
   height: 1rem;
@@ -832,6 +859,11 @@ video {
 .size-6 {
   width: 1.5rem;
   height: 1.5rem;
+}
+
+.size-5 {
+  width: 1.25rem;
+  height: 1.25rem;
 }
 
 .h-12 {
@@ -876,6 +908,10 @@ video {
 
 .max-h-\[10px\] {
   max-height: 10px;
+}
+
+.max-h-\[90vh\] {
+  max-height: 90vh;
 }
 
 .w-4 {
@@ -942,6 +978,10 @@ video {
   width: 100%;
 }
 
+.w-\[500px\] {
+  width: 500px;
+}
+
 .max-w-\[100vw\] {
   max-width: 100vw;
 }
@@ -970,6 +1010,10 @@ video {
   max-width: 94vw;
 }
 
+.max-w-\[90vw\] {
+  max-width: 90vw;
+}
+
 .flex-shrink {
   flex-shrink: 1;
 }
@@ -990,6 +1034,10 @@ video {
 
 .rotate-180 {
   --tw-rotate: 180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1130,6 +1178,27 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
+.bg-slate-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[rgba\(0\2c 0\2c 0\2c 0\.25\)\] {
+  background-color: rgba(0,0,0,0.25);
+}
+
+.bg-\[rgba\(0\2c 0\2c 0\2c 0\.45\)\] {
+  background-color: rgba(0,0,0,0.45);
+}
+
+.bg-\[rgba\(0\2c 0\2c 0\2c 0\.95\)\] {
+  background-color: rgba(0,0,0,0.95);
+}
+
+.bg-\[rgba\(0\2c 0\2c 0\2c 0\.55\)\] {
+  background-color: rgba(0,0,0,0.55);
+}
+
 .bg-center {
   background-position: center;
 }
@@ -1150,6 +1219,18 @@ video {
 
 .p-6 {
   padding: 1.5rem;
+}
+
+.p-10 {
+  padding: 2.5rem;
+}
+
+.p-7 {
+  padding: 1.75rem;
+}
+
+.p-8 {
+  padding: 2rem;
 }
 
 .px-10 {
@@ -1180,6 +1261,11 @@ video {
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .pb-2 {
@@ -1268,6 +1354,10 @@ video {
   font-size: 14px;
 }
 
+.text-\[16px\] {
+  font-size: 16px;
+}
+
 .text-\[32px\] {
   font-size: 32px;
 }
@@ -1292,8 +1382,19 @@ video {
   line-height: 1.75rem;
 }
 
-.text-\[16px\] {
-  font-size: 16px;
+.text-8xl {
+  font-size: 6rem;
+  line-height: 1;
+}
+
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .font-bold {
@@ -1304,12 +1405,20 @@ video {
   font-weight: 600;
 }
 
+.font-extrabold {
+  font-weight: 800;
+}
+
 .leading-4 {
   line-height: 1rem;
 }
 
 .leading-9 {
   line-height: 2.25rem;
+}
+
+.leading-\[22px\] {
+  line-height: 22px;
 }
 
 .leading-\[42px\] {
@@ -1322,10 +1431,6 @@ video {
 
 .leading-tight {
   line-height: 1.25;
-}
-
-.leading-\[22px\] {
-  line-height: 22px;
 }
 
 .tracking-\[3px\] {
@@ -1369,6 +1474,10 @@ video {
 .placeholder-gray-400::placeholder {
   --tw-placeholder-opacity: 1;
   color: rgb(156 163 175 / var(--tw-placeholder-opacity, 1));
+}
+
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 * {
@@ -1557,11 +1666,6 @@ video {
 
   .\32xl\:hidden {
     display: none;
-  }
-
-  .\32xl\:size-\[14px\] {
-    width: 14px;
-    height: 14px;
   }
 
   .\32xl\:w-\[14px\] {
