--- a/assets/styles/item.css
+++ b/assets/styles/item.css
@@ -80,12 +80,22 @@
 /* Breadcrumbs */
 .path__breadcrumbs {
   display: flex;
+  gap: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+
+  font-family: 'Satoshi-regular';
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.6);
 }
 .path__breadcrumb {
   display: flex;
+  gap: 10px;
 }
 .breadcrumb__pointer {
   display: inline-block;
+  margin-top: auto;
+  margin-bottom: auto;
 
   transform: rotate(-90deg);
   width: 12px;
@@ -96,13 +106,13 @@
 .reviews__menu {
   display: flex;
 }
-.reviews__card {
+/* .reviews__card {
   margin: 24px 16px auto 16px;
   padding: 24px;
   height: 180px;
   width: 340px;
   border-radius: 30px;
-}
+} */
 
 /* Gallery */
 .item__main-picture {
@@ -272,11 +282,39 @@
   text-align: center;
 }
 
-/*  */
+/* Tabs */
 .tabs__list {
   display: flex;
   justify-content: space-evenly;
   height: 62px;
   line-height: 62px;
   width: 100%;
+}
+
+/* Reviews */
+.reviews__list {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  flex-wrap: wrap;
+
+  margin-top: 30px;
+}
+.reviews__card {
+  display: flex;
+  flex-direction: column;
+
+  width: 29vw;
+  min-width: 400px;
+  padding: 18px 30px;
+  height: 240px;
+  border-radius: 30px;
+}
+.reviews__card__stars {
+  margin-left: -4px;
+}
+
+.reviews__card__date {
+  margin-top: auto;
+  margin-bottom: 0;
 }
