--- a/assets/styles/output.css
+++ b/assets/styles/output.css
@@ -618,6 +618,10 @@ video {
   left: 0px;
 }
 
+.left-3 {
+  left: 0.75rem;
+}
+
 .left-\[50\%\] {
   left: 50%;
 }
@@ -626,36 +630,16 @@ video {
   top: 0px;
 }
 
+.top-3 {
+  top: 0.75rem;
+}
+
 .top-\[20vw\] {
   top: 20vw;
 }
 
 .top-\[50\%\] {
   top: 50%;
-}
-
-.bottom-0 {
-  bottom: 0px;
-}
-
-.right-0 {
-  right: 0px;
-}
-
-.left-2 {
-  left: 0.5rem;
-}
-
-.top-2 {
-  top: 0.5rem;
-}
-
-.left-3 {
-  left: 0.75rem;
-}
-
-.top-3 {
-  top: 0.75rem;
 }
 
 .z-0 {
@@ -856,14 +840,19 @@ video {
   height: 1rem;
 }
 
+.size-5 {
+  width: 1.25rem;
+  height: 1.25rem;
+}
+
 .size-6 {
   width: 1.5rem;
   height: 1.5rem;
 }
 
-.size-5 {
-  width: 1.25rem;
-  height: 1.25rem;
+.size-10 {
+  width: 2.5rem;
+  height: 2.5rem;
 }
 
 .h-12 {
@@ -958,6 +947,10 @@ video {
   width: 340px;
 }
 
+.w-\[500px\] {
+  width: 500px;
+}
+
 .w-\[80\%\] {
   width: 80%;
 }
@@ -976,10 +969,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[500px\] {
-  width: 500px;
 }
 
 .max-w-\[100vw\] {
@@ -1006,12 +995,12 @@ video {
   max-width: 700px;
 }
 
-.max-w-\[94vw\] {
-  max-width: 94vw;
-}
-
 .max-w-\[90vw\] {
   max-width: 90vw;
+}
+
+.max-w-\[94vw\] {
+  max-width: 94vw;
 }
 
 .flex-shrink {
@@ -1034,10 +1023,6 @@ video {
 
 .rotate-180 {
   --tw-rotate: 180deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1150,6 +1135,10 @@ video {
   background-color: rgb(242 240 241 / var(--tw-bg-opacity, 1));
 }
 
+.bg-\[rgba\(0\2c 0\2c 0\2c 0\.55\)\] {
+  background-color: rgba(0,0,0,0.55);
+}
+
 .bg-\[rgba\(255\2c 51\2c 51\2c 0\.1\)\] {
   background-color: rgba(255,51,51,0.1);
 }
@@ -1178,27 +1167,6 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-slate-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(100 116 139 / var(--tw-bg-opacity, 1));
-}
-
-.bg-\[rgba\(0\2c 0\2c 0\2c 0\.25\)\] {
-  background-color: rgba(0,0,0,0.25);
-}
-
-.bg-\[rgba\(0\2c 0\2c 0\2c 0\.45\)\] {
-  background-color: rgba(0,0,0,0.45);
-}
-
-.bg-\[rgba\(0\2c 0\2c 0\2c 0\.95\)\] {
-  background-color: rgba(0,0,0,0.95);
-}
-
-.bg-\[rgba\(0\2c 0\2c 0\2c 0\.55\)\] {
-  background-color: rgba(0,0,0,0.55);
-}
-
 .bg-center {
   background-position: center;
 }
@@ -1219,18 +1187,6 @@ video {
 
 .p-6 {
   padding: 1.5rem;
-}
-
-.p-10 {
-  padding: 2.5rem;
-}
-
-.p-7 {
-  padding: 1.75rem;
-}
-
-.p-8 {
-  padding: 2rem;
 }
 
 .px-10 {
@@ -1382,31 +1338,16 @@ video {
   line-height: 1.75rem;
 }
 
-.text-8xl {
-  font-size: 6rem;
-  line-height: 1;
-}
-
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
 .font-bold {
   font-weight: 700;
 }
 
-.font-semibold {
-  font-weight: 600;
-}
-
 .font-extrabold {
   font-weight: 800;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .leading-4 {
@@ -1478,6 +1419,10 @@ video {
 
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.\[first\:index\=\=0\] {
+  first: index==0;
 }
 
 * {
