--- a/assets/styles/item.css
+++ b/assets/styles/item.css
@@ -1,42 +1,10 @@
-@media (max-width: 1100px) {
-  /* Gallery */
-  .item__gallery {
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: center;
-    align-items: center;
-
-    width: 100%;
-    max-height: 520px;
-    gap: 10px;
-  }
-  .secondary-pictures {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-    max-width: 100%;
-  }
-  .main-picture {
-    max-width: 100%;
-    max-height: 400px;
-  }
-  .item__main-picture {
-    object-fit: contain;
-    max-height: 400px;
-  }
-  .item__secondary-picture {
-    object-fit: contain;
-    max-width: 50%;
-    max-height: 110px;
+/* PC view */
+@media (min-width: 1127px) {
+  .reviews__card {
+    /* width: 30vw; */
+    width: calc(33% - 20px);
   }
 
-  .item__interactive-menu {
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-@media (min-width: 1101px) {
   .top__section {
     display: flex;
     flex-direction: row;
@@ -77,6 +45,97 @@
   }
 }
 
+/* Tablet view */
+@media (min-width: 745px) and (max-width: 1126px) {
+  .reviews__card {
+    /* width: 44vw; */
+    width: calc(50% - 20px);
+  }
+
+  /* Gallery */
+  .item__gallery {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+
+    width: 100%;
+    max-height: 520px;
+    gap: 10px;
+  }
+  .secondary-pictures {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    max-width: 100%;
+  }
+  .main-picture {
+    max-width: 100%;
+    max-height: 400px;
+  }
+  .item__main-picture {
+    object-fit: contain;
+    max-height: 400px;
+  }
+  .item__secondary-picture {
+    object-fit: contain;
+    max-width: 50%;
+    max-height: 110px;
+  }
+
+  .item__interactive-menu {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+/* Horizontal mobile view */
+@media (max-width: 744px) {
+  .reviews__card {
+    /* width: 90vw; */
+    width: 100%;
+  }
+
+  /* Gallery */
+  .item__gallery {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+
+    width: 100%;
+    max-height: 520px;
+    gap: 10px;
+  }
+  .secondary-pictures {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    max-width: 100%;
+  }
+  .main-picture {
+    max-width: 100%;
+    max-height: 400px;
+  }
+  .item__main-picture {
+    object-fit: contain;
+    max-height: 400px;
+  }
+  .item__secondary-picture {
+    object-fit: contain;
+    max-width: 50%;
+    max-height: 110px;
+  }
+
+  .item__interactive-menu {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+/* All views */
 /* Breadcrumbs */
 .path__breadcrumbs {
   display: flex;
@@ -84,7 +143,7 @@
   margin-top: 20px;
   margin-bottom: 20px;
 
-  font-family: 'Satoshi-regular';
+  font-family: 'Satoshi-Regular';
   font-size: 16px;
   color: rgba(0, 0, 0, 0.6);
 }
@@ -106,13 +165,6 @@
 .reviews__menu {
   display: flex;
 }
-/* .reviews__card {
-  margin: 24px 16px auto 16px;
-  padding: 24px;
-  height: 180px;
-  width: 340px;
-  border-radius: 30px;
-} */
 
 /* Gallery */
 .item__main-picture {
@@ -294,27 +346,93 @@
 /* Reviews */
 .reviews__list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
-  flex-wrap: wrap;
 
   margin-top: 30px;
+
+  align-items: flex-start;
 }
 .reviews__card {
   display: flex;
   flex-direction: column;
 
-  width: 29vw;
-  min-width: 400px;
-  padding: 18px 30px;
-  height: 240px;
+  min-width: 338px;
+  max-width: 610px;
+
+  padding: 18px 28px;
   border-radius: 30px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
+
+  flex-grow: 0;
+  align-self: flex-start;
+}
+.review__card-collapsed {
+  height: 264px;
 }
 .reviews__card__stars {
   margin-left: -4px;
 }
+.reviews__card__text {
+  font-family: 'Satoshi-Regular';
+  font-size: 16px;
 
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.reviews__card__text-collapsed {
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+}
+
+.reviews__card__text-expanded {
+  display: block;
+  height: auto;
+}
+
+.reviews__full-review {
+  cursor: pointer;
+  text-align: center;
+  color: #0353f4;
+}
 .reviews__card__date {
   margin-top: auto;
   margin-bottom: 0;
+
+  font-family: 'Satoshi-Medium';
+  font-size: 16px;
+  line-height: 22px;
+  color: rgba(0, 0, 0, 0.6);
+}
+.reviews__pages {
+  margin-top: 30px;
+  display: flex;
+  gap: 14px;
+  align-items: center;
+  justify-content: center;
+  user-select: none;
+}
+.reviews__previous-page {
+  transform: rotate(180deg);
+
+  width: 40px;
+  height: 40px;
+
+  cursor: pointer;
+}
+.reviews__current-page {
+  font-size: 30px;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  background-color: #f0f0f0;
+  border-radius: 20px;
+}
+.reviews__next-page {
+  width: 40px;
+  height: 40px;
+
+  cursor: pointer;
 }
