--- a/assets/styles/output.css
+++ b/assets/styles/output.css
@@ -598,6 +598,10 @@ video {
   pointer-events: none;
 }
 
+.collapse {
+  visibility: collapse;
+}
+
 .fixed {
   position: fixed;
 }
@@ -747,6 +751,10 @@ video {
   margin-left: 14px;
 }
 
+.ml-\[54px\] {
+  margin-left: 54px;
+}
+
 .mr-10 {
   margin-right: 2.5rem;
 }
@@ -757,6 +765,10 @@ video {
 
 .mr-4 {
   margin-right: 1rem;
+}
+
+.mr-\[54px\] {
+  margin-right: 54px;
 }
 
 .mt-0 {
@@ -848,11 +860,6 @@ video {
 .size-6 {
   width: 1.5rem;
   height: 1.5rem;
-}
-
-.size-10 {
-  width: 2.5rem;
-  height: 2.5rem;
 }
 
 .h-12 {
@@ -1078,10 +1085,6 @@ video {
 
 .justify-evenly {
   justify-content: space-evenly;
-}
-
-.gap-2 {
-  gap: 0.5rem;
 }
 
 .gap-3 {
@@ -1419,10 +1422,6 @@ video {
 
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.\[first\:index\=\=0\] {
-  first: index==0;
 }
 
 * {
